<resources>
    <string name="app_name">WiraJasa Bisnis</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="service_register">Serivce Register</string>
    <string name="service_name">Service Name</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="open_service">OPEN SERVICE</string>
    <string name="save">SAVE</string>
    <string name="service_photo">Service Photo</string>
    <string name="image_icon">Image Icon</string>
    <string name="edit_service">Edit Service</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="have_an_account">Have an account?</string>
    <string name="forgot_password_2">Forgot Password</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="input_address">Input address</string>
    <string name="input_phone_number">Input phone number</string>
    <string name="submit">Submit</string>
    <string name="register_success">Account successfully created</string>
    <string name="success_update_data">Successfully Update Data</string>
    <string name="reset_success">Email confirmation has been sent to you</string>
    <string name="empty_invalid_email">Email is empty or is not a valid email</string>
    <string name="empty_password">Password is empty or less than 8 characters</string>
    <string name="empty_confirmation_password">Confirmation password is empty or less than 8 characters</string>
    <string name="different_password">Password and Confirmation is not the same</string>
    <string name="connection_error">Check your connectivity and try again later</string>
    <string name="invalid_email">Email is not exist</string>
    <string name="invalid_credential">Email / Password is invalid</string>
    <string name="invalid_account">Account not found or has been suspended</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="loading">Loading</string>
    <string name="detail_picture">Detail Picture</string>
    <string name="contact_the_provider">Contact Seller</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="title">Service Name</string>
    <string name="price">Rp. 00.000.00.,-</string>
    <string name="alert_title">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert_message">Have you agreed to all the terms of service?</string>
    <string name="tv_service_register">Register Service</string>
    <string name="hint_service_name">Service Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="tv_upload_photos">Upload Picture</string>
    <string name="btn_open_service">OPEN SERVICE</string>
    <string name="btn_save">SAVE</string>
    <string name="iv_service_photo">Service Photo</string>
    <string name="iv_icon">Image Icon</string>
    <string name="tv_edit_service">Edit Service</string>
    <string name="tv_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="tv_login">Login</string>
    <string name="tv_or">or</string>
    <string name="btn_register">Register</string>
    <string name="tv_register">Register</string>
    <string name="tv_forgot_password">Forgot Password?</string>
    <string name="hint_password_confirmation">Password Confirmation</string>
    <string name="tv_have_an_account">Have an account?</string>
    <string name="btn_send_reset_link">Send Reset Link</string>
    <string name="tv_input_address">Input address</string>
    <string name="tv_input_phone_number">Input phone number</string>
    <string name="btn_submit">Submit</string>
    <string name="tv_register_success">Account successfully created</string>
    <string name="tv_reset_success">Email confirmation has been sent to you</string>
    <string name="tv_empty_invalid_email">Email is empty or is not a valid email</string>
    <string name="tv_empty_password">Password is empty or less than 8 characters</string>
    <string name="tv_empty_confirmation_password">Confirmation password is empty or less than 8 characters</string>
    <string name="tv_different_password">Password and Confirmation is not the same</string>
    <string name="tv_connection_error">Check your connectivity and try again later</string>
    <string name="tv_invalid_email">Email is not exist</string>
    <string name="tv_invalid_credential">Email / Password is invalid</string>
    <string name="tv_invalid_account">Account not found or has been suspended</string>
    <string name="tv_something_went_wrong">Something went wrong</string>
    <string name="tv_loading">Loading</string>
    <string name="tv_detail_picture">Detail Picture</string>
    <string name="tv_contact_the_provider">CONTACT THE PROVIDER</string>
    <string name="tv_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="tv_title">Title</string>
    <string name="tv_price">Rp. 00.000.00.,-</string>
    <string name="hint_price_rupiah">Price (Rupiah)</string>
    <string name="title_activity_seller">SellerActivity</string>
    <string name="title_activity_seller_base">SellerBaseActivity</string>
    <string name="title_activity_bottom_navigation_seller">BottomNavigationSellerActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_dashboard">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="tv_unit">Unit</string>
    <string name="btn_save_profile">save</string>
    <string name="btn_change_password">Change Password ?</string>
    <string name="tv_notification">Notification</string>
    <string name="btn_logout">Logout</string>
    <string name="tv_welcome_user">Welcome %s</string>
    <string name="tv_signing_in">Signing in…</string>
    <string name="tv_getting_profile">Getting profile…</string>
    <string name="tv_signing_up">Creating account…</string>
    <string name="tv_uploading_profile">Creating profile…</string>
    <string name="iv_app_logo">App Logo</string>
    <string name="tv_form_have_to_be_filled">Form have to be filled</string>
    <string name="tv_success_add_data">Successfully Added Data</string>
    <string name="image_type">image/*</string>
    <string name="btn_about_us">About Us</string>
    <string name="btn_term_of_reference">Term of Reference</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="not_setup">Not Setup</string>
    <string name="pending">Pending</string>
    <string name="slash_unit">/unit</string>
    <string name="rupiah">Rp %1$d</string>
    <string name="detail_unit">/%1$s</string>
    <string name="detail_address">%1$s (%2$s)</string>
    <string name="tv_choose_a_picture">Choose a Picture</string>
    <string name="tv_not_setup">Not Setup</string>
    <string name="tv_pending">Pending</string>
    <string name="tv_slash_unit">/unit</string>
    <string name="profile_phone_number">+62%s</string>
    <string name="profile">Profile</string>
    <string name="iv_profile_picture">Profile Picture</string>
    <string name="btn_edit_picture">Edit Photo</string>
    <string name="btn_upload_picture">Upload Picture</string>
    <string name="btn_register_as_seller">Register as Seller</string>
    <string name="btn_edit_profile_data">Edit</string>
    <string name="loading_status_uploading_image">Uploading Image…</string>
    <string name="loading_status_updating_profile_data">Updating Profile Data…</string>
    <string name="loading_status_uploading_application_form">Uploading application form…</string>
    <string name="loading_status_fetching_data">Fetching Data…</string>
    <string name="loading_status_updating_seller_status">Updating Seller Status…</string>
    <string name="loading_status_updating_form_status">Updating Form Status…</string>
    <string name="loading_status_getting_seller_data">Getting Seller Data…</string>
    <string name="tv_application_status">Status : %s</string>
    <string name="tv_gallery_permission_title">Need gallery access</string>
    <string name="tv_gallery_permission_denied">Permission Denied, please grant access to select picture</string>
    <string name="tv_select_image">Please select a picture</string>
    <string name="tv_username">Username</string>
    <string name="tv_please_fill_current_Profile">Please fill current profile information before continue</string>
    <string name="btn_select_file">Select File</string>
    <string name="hint_province">Province</string>
    <string name="hint_full_name">Full Name</string>
    <string name="floating_action_button_for_adding_service">Floating Action Button for Adding Service</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="tv_greeting">Hi, %s</string>
    <string name="select_province">Select Province</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="iv_icon_service">icon service</string>
    <string name="iv_icon_address">Icon Address</string>
    <string name="iv_icon_phone">Icon Phone</string>
    <string name="btn_contact_by_whatsapp">Contact by Whatsapp</string>
</resources>