<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:scaleType="centerCrop"
            android:id="@+id/iv_item_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/iv_service_photo"
            android:src="@drawable/ic_launcher_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/tv_title"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_item_photo"
            app:layout_constraintTop_toTopOf="@id/iv_item_photo" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/tv_price"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/iv_item_photo"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>