<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".ui.user.UserValidation"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:cardBackgroundColor="@color/grey"
        android:elevation="8dp" >

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="60dp"
            android:src="@drawable/ic_upload_foto" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/tv_input_address"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/input_address"
        android:inputType="text"/>
    <EditText

        android:id="@+id/tv_input_phone_number"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/input_phone_number"
        android:inputType="text"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/dark_blue"
        android:text="@string/submit" />

</LinearLayout>