<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:padding="24dp"
    tools:context=".ui.register_buyyer.RegisterBuyyerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/inter_bold"
            android:text="@string/register"
            android:textColor="?android:attr/textColorHint"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_layout_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email"
            android:textColorHint="?android:attr/textColorHint"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="?attr/startIconTint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textColor="?android:attr/textColorHint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_layout_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:textColorHint="?android:attr/textColorHint"
            app:boxStrokeColor="@color/dark_blue"
            app:endIconMode="password_toggle"
            app:endIconTint="?attr/endIconTint"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="?attr/startIconTint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="?android:attr/textColorHint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_layout_confirm_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/password_confirmation"
            android:textColorHint="?android:attr/textColorHint"
            app:boxStrokeColor="@color/dark_blue"
            app:endIconMode="password_toggle"
            app:endIconTint="?attr/endIconTint"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="?attr/startIconTint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="?android:attr/textColorHint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="@font/inter_bold"
            android:text="@string/register"
            android:textColor="@color/orange"
            app:cornerRadius="0dp" />

        <LinearLayout
            android:id="@+id/layout_click_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:text="@string/have_an_account"
                android:textColor="@color/dark_blue" />

            <TextView
                android:id="@+id/tv_click_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/inter_bold"
                android:text="@string/login"
                android:textColor="@color/dark_blue" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>